overflow fixed
der var overflow på grund af nogle links i kildelisten og nu med word break er det fixet

--- a/style.css
+++ b/style.css
@@ -595,6 +595,10 @@ html, body {
     margin-left: 1em;
 }
 
+.designthinking-php .kilder-dt li a {
+    word-break: break-all;
+}
+
 
 .designthinking-php #steps-dt-hverdag li {
     margin-top: 0.75em;
